# acl2-jupyter

./: .gitignore  .gitmodules  Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: docker-release.yml
context/acl2-jupyter-kernel/: DESIGN.md  acl2-jupyter-kernel.asd  complete.lisp  inspect.lisp  installer.lisp  kernel.lisp  packages.lisp
context/script2notebook/: .gitignore  README.md  __init__.py  __main__.py  cli.py  converter.py  languages.py  parser.py  pyproject.toml
context/script2notebook/tests/: test_cli.py  test_converter.py  test_languages.py  test_parser.py
context/wiki3-kg/: Dockerfile  README.md
